--- a/base/templates/base/web/index.html
+++ b/base/templates/base/web/index.html
@@ -1,13 +1,12 @@
 {% extends 'base/web/base.html' %}
 
 {% block title %}
+    陈恩惠，我爱你
 {% endblock %}
 
 {% block container %}
+        <div style="font-size: 50px;">陈恩惠，我爱你</div>
 {% endblock %}
 
 {% block bottom_js %}
-<script type="text/javascript">
-    {#window.location.href = '{{ code_url | safe }}';#}
-</script>
 {% endblock %}
