--- a/base/templates/base/web/base.html
+++ b/base/templates/base/web/base.html
@@ -34,6 +34,10 @@
     <script type="text/javascript" src="{% static 'base/common/lib/jquery/jquery-3.3.1.js' %}"></script>
     <script type="text/javascript" src="{% static 'base/common/lib/vue/vue.js' %}"></script>
     <script type="text/javascript" src="{% static 'base/common/lib/bootstrap/js/bootstrap.js' %}"></script>
+
+    <script type="text/javascript" src="{% static 'base/common/js/ajax.csrf.js' %}"></script>
+    <script type="text/javascript" src="{% static 'base/common/js/utils.js' %}"></script>
+    <script type="text/javascript" src="{% static 'base/common/js/constants.js' %}"></script>
 {% endblock %}
 {% block local_js %}
 {% endblock %}
