--- a/base/templates/base/web/base.html
+++ b/base/templates/base/web/base.html
@@ -16,6 +16,7 @@
 
     {% block top_css %}
     <link type="text/css" rel="stylesheet" href="{% static 'base/common/lib/bootstrap/css/bootstrap.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'base/common/lib/font-awesome/css/font-awesome.css' %}">
     {% endblock %}
     <style type="text/css">
         [v-cloak] {
@@ -32,8 +33,9 @@
 </div>
 {% block bottom_js %}
     <script type="text/javascript" src="{% static 'base/common/lib/jquery/jquery-3.3.1.js' %}"></script>
-    <script type="text/javascript" src="{% static 'base/common/lib/vue/vue.js' %}"></script>
+    <script type="text/javascript" src="{% static 'base/common/lib/popper/umd/popper.js' %}"></script>
     <script type="text/javascript" src="{% static 'base/common/lib/bootstrap/js/bootstrap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'base/common/lib/vue/vue.js' %}"></script>
 
     <script type="text/javascript" src="{% static 'base/common/js/ajax.csrf.js' %}"></script>
     <script type="text/javascript" src="{% static 'base/common/js/utils.js' %}"></script>
