--- a/base/templates/base/web/base.html
+++ b/base/templates/base/web/base.html
@@ -22,6 +22,13 @@
         [v-cloak] {
             display: none;
         }
+        html, body, #pg {
+            height: 100%;
+            width: 100%;
+        }
+        #pg {
+            position: relative;
+        }
     </style>
     {% block local_css %}
     {% endblock %}
